test/should_not_compile/syntax_valbind.sml
val x = 123 and x = 456;
